--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=GB2312" />
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>锋味</title>
 		<link href="css/style.css" rel="stylesheet" />	
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="js/index.js"/></script>
-		<!--[if IE 6]>
-		<script src="js/DD_belatedPNG_0.0.8a.js"></script>
-		<script>
-		DD_belatedPNG.fix('*');
-		</script>
-		<![endif]-->
 	</head>
 	<body>
 		<div id="header" class="gradient">
 			<div class="img"></div>
 			<div class='form'>
 				<form action='#'>
-					<input type='text' class='text' value="舒芙蕾|提拉米苏"/>
+					<input type='text' class='text' value="舒芙蕾|提拉米苏" placeholder="请输入"/>
 					<input type='submit' class='btn' value=""/>
 				</form>
 			</div>
@@ -594,7 +589,7 @@
 									<div class="text fr">
 										<h3><a href="#">锋味餐厅</a></h3>
 										<p>
-											口味：<a href="#">自创香辣/a><br/>
+											口味：<a href="#">自创香辣</a><br/>
 											区域：<a href="#">朝阳/三里屯</a>
 										</p>
 									</div>
