--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1,user-scalble=0,minimal-ui">
 		<title>锋味</title>
 		<link href="css/style.css" rel="stylesheet" />	
 		<script src="js/jquery-3.1.1.min.js"></script>
