--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1,user-scalble=0,minimal-ui">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>锋味</title>
 		<link href="css/style.css" rel="stylesheet" />	
 		<script src="js/jquery-3.1.1.min.js"></script>
@@ -144,7 +144,7 @@
 						<h2 class="new_title">
 							<span>LUCKY YODAY</span>
 							<em>每日活动</em>
-							<strong> 2016.11</strong>
+							<strong> 2016.12</strong>
 						</h2>
 						<div class="con">
 							<div class="info">
@@ -154,8 +154,8 @@
 								</div>
 								<div class="text fr">
 									<h3>
-										<em>11</em>
-										<em>26</em>
+										<em>12</em>
+										<em>1</em>
 										<span>本日主题:生日宴</span>
 									</h3>	
 										<p>
@@ -256,42 +256,42 @@
 								<li>
 									<em><img src="img/content/recommend_list_ico1.gif"/>|</em>
 									<a href="#">《12道锋味》蒙牛优益C</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico2.gif">|</em>
 									<a href="#">提拉米苏.给心仪的她</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico1.gif"/>|</em>
 									<a href="#">《12道锋味》蒙牛优益C</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico2.gif">|</em>
 									<a href="#">提拉米苏.给心仪的她</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico1.gif"/>|</em>
 									<a href="#">《12道锋味》蒙牛优益C</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico2.gif">|</em>
 									<a href="#">提拉米苏.给心仪的她</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico1.gif"/>|</em>
 									<a href="#">《12道锋味》蒙牛优益C</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 								<li>
 									<em><img src="img/content/recommend_list_ico2.gif">|</em>
 									<a href="#">提拉米苏.给心仪的她</a>
-									<span>16/11/26</span>
+									<span>16/12/12</span>
 								</li>
 							</ul> 
 						</div>
