--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>锋味</title>
 		<link href="css/style.css" rel="stylesheet" />	
+		<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 400px)" href="tinyScreen.css" />  
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 400px) and (max-device-width: 600px)" href="smallScreen.css" />
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="js/index.js"/></script>
 	</head>
