--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>锋味</title>
 		<link href="css/style.css" rel="stylesheet" />	
-		<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 400px)" href="tinyScreen.css" />  
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 400px) and (max-device-width: 600px)" href="smallScreen.css" />
-		<script src="js/jquery-3.1.1.min.js"></script>
+		<link rel="stylesheet" media="screen and (max-width: 600px)" href="small.css" />
+		<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 		<script src="js/index.js"/></script>
 	</head>
 	<body>
