--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>锋味</title>
 		<link href="css/style.css" rel="stylesheet" />	
 		<link rel="stylesheet" media="screen and (max-width: 600px)" href="small.css" />
+		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 		<script src="js/index.js"/></script>
