--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <section>
 	<div class="container">
     	<div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-8 left_btn">
+            <div class="col-xs-8 left_btn">
                 <a href="#" class="btn btn_recharge">
                     <span></span>
                 </a>
@@ -138,7 +138,7 @@
                     <span></span>
                 </a>            
             </div>
-            <div class="col-xs-6 col-md-4 right_btn">
+            <div class="right_btn">
                 <a href="#" class="btn btn_source">
                     <span></span>
                 </a>
