--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					</button>                
                     <a title="dota2" class="nav_log navbar-brand page-scroll" href="#"></a>
             </div>
-            <div class="collapse navbar-collapse" id="top">
-        	<ul class="nav navbar-nav">
-            	<li class="">
+            <div class="collapse navbar-collapse menu" id="top">
+        	<ul class="nav navbar-nav main-menu navbar-left">
+            	<li>
                 	<a href="#">
                     	<span>首页</span></br>
                         <span class="link_nav_e">HOME</span>
@@ -34,7 +34,7 @@
                         <li><a href="#">玩家工坊</a></li>
                     </ul>
                 </li>            	
-                <li class="">
+                <li>
                 	<a href="#">
                     	<span>资讯</span></br>
                         <span class="link_nav_e">NEWS</span>
@@ -46,7 +46,7 @@
                         <li><a href="#">游戏攻略</a></li>
                     </ul>
                 </li>
-            	<li class="">
+            	<li>
                 	<a href="#">
                           <span>赛事</span></br> 
                           <span class="link_nav_e">MATCH</span>
@@ -56,7 +56,7 @@
                         <li><a href="#">活动中心</a></li>
                     </ul>
                 </li>
-            	<li class="">
+            	<li>
                 	<a href="#">
                     	<span>资料</span></br>
                         <span class="link_nav_e">DATA</span>
@@ -69,7 +69,7 @@
                         <li><a href="#">新手引导</a></li>
                     </ul>
                 </li>
-            	<li class="">
+            	<li>
                 	<a href="#">
                     	<span>服务</span>
                         <span class="link_nav_e">SERVICE</span>
@@ -102,7 +102,7 @@
                 </div>
              </div>
     	</div>
-      </div>   
+     </div>   
 </nav>
 <header>
 	<div id="myCarousel" class="carousel slide intro-header">
@@ -802,63 +802,57 @@
                </div>
             <div class="d_content">
             	<div class="input-group">
-                	<input type="text"  value="输入您的问题" class="form-control input-lg"><span class="input-group-addon btn btn-primary">搜索</span><span class="input-group-addon btn btn-primary">我要提问</span>
+                	<input type="text"  value="输入您的问题" class="form-control input-lg"><span class="input-group-addon btn btn-primary">搜索</span><a href="#" class="input-group-addon btn btn-default btn-lg active">我要提问</a>
                	</div>
                 <div class="tab-content">
                 <h4 class="">常见问题</h4>
                 <ul class="list-group">
-             		<li class="list-group-item">
+             		<li class="list-group-item list-red">
                    		 <a href="#">
-                         <i class="icon-bar"></i>
+                         <i class="d_icon d_icon_dot "></i>
                          如何找回与DOTA2账户绑定的完美通行证？
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#">
-                        <i class=""></i>
+                        <i class="d_icon d_icon_dot "></i>
                         为什么我需要注册两个账号？
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#">
-                        <i class=""></i>
+                        <i class="d_icon d_icon_dot "></i>
                         如何注册DOTA2账号？
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#">
-                        <i class=""></i>
+                        <i class="d_icon d_icon_dot "></i>
                         如何绑定完美通行证（完美电竞账号）？
                         </a>
                     </li>
              		<li class="list-group-item">
                    		 <a href="#">
-                         <i class="icon-bar"></i>
+                        <i class="d_icon d_icon_dot "></i>
                          如何找回与DOTA2账户绑定的完美通行证？
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#">
-                        <i class=""></i>
+                        <i class="d_icon d_icon_dot "></i>
                         为什么我需要注册两个账号？
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#">
-                        <i class=""></i>
+                        <i class="d_icon d_icon_dot "></i>
                         如何注册DOTA2账号？
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="#">
-                        <i class=""></i>
+                        <i class="d_icon d_icon_dot "></i>                        
                         如何绑定完美通行证（完美电竞账号）？
-                        </a>
-                    </li>
-             		<li class="list-group-item">
-                   		 <a href="#">
-                         <i class="icon-bar"></i>
-                         如何找回与DOTA2账户绑定的完美通行证？
                         </a>
                     </li>
                 </ul>
