--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <head>
 <meta charset="utf-8"/>
 <title>dota2</title>
-
-
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="css/style.css"/>
 
@@ -21,7 +19,7 @@
                     <a title="dota2" class="nav_log navbar-brand page-scroll" href="#"></a>
             </div>
             <div class="collapse navbar-collapse menu" id="top">
-        	<ul class="nav navbar-nav main-menu navbar-left">
+        	<ul class="nav navbar-nav main-menu navbar-right">
             	<li>
                 	<a href="#">
                     	<span>首页</span></br>
@@ -119,7 +117,7 @@
             	<img src="http://img.dota2.com.cn/maps/5d/7f/5d7f7697d349d47dfa5518fd11a49a621485159509.jpg"/>
             </div>
             <div class="item">
-            	<img src="images/pic4.jpg"/>
+            	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>
             </div>
         </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev"></a>
@@ -287,16 +285,16 @@
                             </a>
                         </div>
                     </div>
-					<div class="tab-pane fade in active d_tab" id="Genaral">
+					<div class="tab-pane fade in active d_tab" id="Contest">
                     	<div class="d_lists">
           					<a class="d_recommend" href="#">
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src="http://img.dota2.com.cn/dota2/4a/34/4a348628b67cc98ee32bd7ba728b83d71486621903.jpg"/>
+                                    	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>
                                     </div>
                                     <div class="d_msg">
-                                    	<p>DOTA2 2月9日更新日志：7.02游戏更新</p>
+                                    	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
                                         <span class="d_data">2017-02-09</span>
                                     </div>
                                  </div>
@@ -343,7 +341,7 @@
                             </a>
                         </div>
                     </div>
-					<div class="tab-pane fade in active d_tab" id="Genaral">
+					<div class="tab-pane fade in active d_tab" id="Update">
                     	<div class="d_lists">
           					<a class="d_recommend" href="#">
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
@@ -415,12 +413,10 @@
                 </div>
             </div>
             <div class="d_content">
-            	<div class="video end" id="video_box">
-                	<video autoplay preload="auto">
-                    	<source type="video/mp4" src="images/video/countdown.mp4">
-                    </video>
-                    <div class="video-paly-btn" id="js_video_btn"></div>
-                </div>
+<video  controls="controls" autoplay="autoplay">
+ <source src="images/video/countdown.mp4" type="video/mp4">
+您的浏览器不支持 video 标签。
+</video>
                 <div class="new-travel">
                 	<div class="version-box">
                     	<a href="#" class="version-newest">
@@ -886,9 +882,11 @@
     </div>
   </div> 
 </footer>   
+<script src="js/base.js"></script>
+<script src="js/custom.js"></script>
 <script src="bootstrap/js/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/dota2.js"></script>
 </body>
 </html>
