--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 </section>
 <section id="news">
 	<div class="container">
+		<div class="row">
     	<div class="section_left col-md-7">
         	<div class="d_title">
             	<div class="d_left">
@@ -440,10 +441,12 @@
                 </div>
             </div>
         </div>
+		</div>
     </div>
 </section>
 <section id="Promotion">
 	<div class="container">
+		<div class="row">
     	<div class="section_left col-md-7">
         	<div class="d_title">
             	<div class="d_left">
@@ -590,10 +593,12 @@
                 			</ul>
                 </div>                
             </div>
+		</div>	
     </div>
 </section>
 <section id="vedio">
 	<div class="container">
+		<div class="row">
     	<div class="section_left col-md-7">
         	<div class="d_title">
             	<div class="d_left">
@@ -837,7 +842,8 @@
                 </ul>
                 </div>
             </div>
-        </div>   
+        </div> 
+		</div>
    </div>
 </section>
 <footer id="footer" class="top-space">
