--- a/index.html
+++ b/index.html
@@ -82,64 +82,102 @@
             </div>
         </div>
     </header> 
-	    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-    </section>
 
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+<nav class="navbar navbar-inverse">
+	<div class="container">
+            <div class="navbar-header navbar-heading page-scroll">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top">
+						<span class="sr-only">Toggle</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>                
+                    <a title="dota2" class="nav_log navbar-brand page-scroll" href="#"></a>
+            </div>
+            <div class="collapse navbar-collapse menu" id="top">
+        	<ul class="nav navbar-nav main-menu">
+            	<li>
+                	<a href="#">
+                    	<span>首页</span></br>
+                        <span class="link_nav_e">HOME</span>
+                    </a>
+                    <ul class="sub-menu">
+                    	<li><a href="#">品牌网站</a></li>
+                        <li><a href="#">个人中心</a></li>
+                        <li><a href="#">神秘商店</a></li>
+                        <li><a href="#">玩家工坊</a></li>
+                    </ul>
+                </li>            	
+                <li>
+                	<a href="#">
+                    	<span>资讯</span></br>
+                        <span class="link_nav_e">NEWS</span>
+                    </a>
+                    <ul class="sub-menu">
+                    	<li><a href="#">官方新闻</a></li>
+                        <li><a href="#">赛事新闻</a></li>
+                        <li><a href="#">更新日志</a></li>
+                        <li><a href="#">游戏攻略</a></li>
+                    </ul>
+                </li>
+            	<li>
+                	<a href="#">
+                          <span>赛事</span></br> 
+                          <span class="link_nav_e">MATCH</span>
+                     </a>
+                    <ul class="sub-menu">
+                    	<li><a href="#">赛事中心</a></li>
+                        <li><a href="#">活动中心</a></li>
+                    </ul>
+                </li>
+            	<li>
+                	<a href="#">
+                    	<span>资料</span></br>
+                        <span class="link_nav_e">DATA</span>
+                    </a>
+                    <ul class="sub-menu">
+                    	<li><a href="#">英雄资料</a></li>
+                        <li><a href="#">物品资料</a></li>
+                        <li><a href="#">视频中心</a></li>
+                        <li><a href="#">之定义地图</a></li>
+                        <li><a href="#">新手引导</a></li>
+                    </ul>
+                </li>
+            	<li>
+                	<a href="#">
+                    	<span>服务</span>
+                        <span class="link_nav_e">SERVICE</span>
+                    </a>
+                    <ul class="sub-menu">
+                    	<li><a href="#">客服中心</a></li>
+                        <li><a href="#">官方论坛</a></li>
+                        <li><a href="#">新浪微博</a></li>
+                        <li><a href="#">网吧特权</a></li>
+                        <li><a href="#">通行证查询</a></li>
+                    </ul>
+                </li>  
+            	<li>
+                	<a href="#">
+                    	<span>下载</span></br>
+                        <span class="link_nav_e">DOWN</span>
+                    </a>
+                    <ul class="sub-menu">
+                    	<li><a href="#">游戏下载</a></li>
+                        <li><a href="#">刀塔助手</a></li>
+                        <li><a href="#">精美壁纸</a></li>
+                        <li><a href="#">官方漫画</a></li>
+                    </ul>
+                </li>                                
+            </ul>
+            <div class="dotauser navbar-right">
+                <i class="glyphicon glyphicon-user"></i>
+                <div class="btn">
+                    您好,请&nbsp;<a href="javascript:;">登录</a>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
-        </div>
-    </footer>
-
-
+             </div>
+    	</div>
+     </div>   
+</nav>
 <header>
 	<div id="myCarousel" class="carousel slide intro-header">
     	<ol class="carousel-indicators">
@@ -155,7 +193,7 @@
             	<img src="http://img.dota2.com.cn/maps/5d/7f/5d7f7697d349d47dfa5518fd11a49a621485159509.jpg"/>
             </div>
             <div class="item">
-            	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>
+            	<img src=""/>
             </div>
         </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev"></a>
@@ -192,7 +230,6 @@
 </section>
 <section id="news">
 	<div class="container">
-		<div class="row">
     	<div class="section_left col-md-7">
         	<div class="d_title">
             	<div class="d_left">
@@ -218,7 +255,7 @@
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src="http://img.dota2.com.cn/dota2/1e/05/1e05ed210380742885e3e63bb4e9c5d11487936607.jpg"/>                                    </div>
+                                    	<img src=""/>                                    </div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
                                         <span class="d_data">2017-02-09</span>                                    </div>
@@ -308,7 +345,7 @@
                                  <h3>DOTA2 2月9日更新日志：7.02游戏性</h3>
                                  <div class="d_contents">
                                  	<div class="d_item">
-                                    	<img src="http://img.dota2.com.cn/maps/72/21/7221c15ae8830f3aa321a7af58e4ca201487935878.jpg"/>                                    </div>
+                                    	<img src=""/>                                    </div>
                                     <div class="d_msg">
                                     	<p>2017基辅特级锦标赛马上就要来临，本次比赛仍会在全世界范围公开选拔喜爱DOTA2的玩家及战队。</p>
                                         <span class="d_data">2017-02-09</span>                                    </div>
@@ -410,7 +447,7 @@
             <div class="d_content">
 <video  controls="controls" autoplay="autoplay">
  <source src="images/video/countdown.mp4" type="video/mp4">
-</video>
+您的浏览器不支持 video 标签。</video>
                 <div class="new-travel">
                 	<div class="version-box">
                     	<a href="#" class="version-newest">
@@ -441,12 +478,10 @@
                 </div>
             </div>
         </div>
-		</div>
     </div>
 </section>
 <section id="Promotion">
 	<div class="container">
-		<div class="row">
     	<div class="section_left col-md-7">
         	<div class="d_title">
             	<div class="d_left">
@@ -593,12 +628,10 @@
                 			</ul>
                 </div>                
             </div>
-		</div>	
     </div>
 </section>
 <section id="vedio">
 	<div class="container">
-		<div class="row">
     	<div class="section_left col-md-7">
         	<div class="d_title">
             	<div class="d_left">
@@ -842,8 +875,7 @@
                 </ul>
                 </div>
             </div>
-        </div> 
-		</div>
+        </div>   
    </div>
 </section>
 <footer id="footer" class="top-space">
